<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorBackgroundLight"
    android:orientation="vertical"
    tools:context=".Register_In_System_Activity">

    <ImageView
        android:layout_width="229dp"
        android:layout_height="135dp"
        android:layout_gravity="center"
        android:src="@drawable/classiclogo"
        android:contentDescription="@string/mainapplogo" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_cardwhiteshape"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/spinnaker_regular"
            android:text="@string/registration_info"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_regshape"
            android:ems="10"
            android:fontFamily="@font/adventpro_regular"
            android:hint="@string/et_enter_user_name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_regshape"
            android:ems="10"
            android:fontFamily="@font/adventpro_regular"
            android:hint="@string/et_enter_user_surname"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_regshape"
            android:ems="10"
            android:fontFamily="@font/adventpro_regular"
            android:hint="@string/et_enter_user_nickname"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_password1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_regshape"
            android:ems="10"
            android:fontFamily="@font/adventpro_regular"
            android:hint="@string/et_enter_user_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_password2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/et_regshape"
            android:ems="10"
            android:fontFamily="@font/adventpro_regular"
            android:hint="@string/et_confirm_pass"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/checkTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spinnaker_regular"
            android:text="@string/termsofuse" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit_registration"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_corneradiusrectangle"
        android:text="@string/btn_submit"
        android:textColor="@color/white" />

</LinearLayout>