<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBEB"
    android:orientation="vertical"
    tools:context=".EditAccountActivity">

    <ImageButton
        android:id="@+id/btnGoBackToSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_margin="10dp"
        android:background="@drawable/et_shape"
        android:onClick="onClickBackToSettings"
        android:src="@drawable/ic_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/spinnaker_regular"
        android:text="@string/edit_account_info_welcome"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_cardwhiteshape"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_newinformation" />

        <EditText
            android:id="@+id/new_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:fontFamily="@font/adventpro_regular"
            android:inputType="textPersonName"
            android:paddingStart="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirmNewChange"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/btn_corneradiusrectangle"
        android:text="@string/btn_confirm_changes" />


</LinearLayout>